FIX: CL-2387 Enable compression for WebDav
git-svn-id: https://svn.javlin.eu/svn/cloveretl.opensource/branches/release-3-2@12551 a09ad3ba-1a0f-0410-b1b9-c67202f10d70